# taskfile

./: .env.local  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TODO.md  Taskfile.yml  analyze_all_projects.py  app.doql.css  goal.yaml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  setup.py  taskfile.yml
.pyqual/: llx_history.jsonl
TODO/: README.md  SUMD.md  __init__.py  dns.py  fixop-extraction-plan.md  models.py  pyproject.toml
TODO/src/fixop/: __init__.py  cli.py
TODO/tests/: test_fixop.py
comparisons/: README.md  taskfile-vs-ansible.md  taskfile-vs-dagger.md  taskfile-vs-go-task.md  taskfile-vs-just.md  taskfile-vs-mage.md  taskfile-vs-make.md
docs/: API.md  CLI.md  COMPARISONS.md  CONTRIBUTING.md  FEATURES.md  FORMAT.md  INSTALL.md  README.md  USAGE.md  WORKSPACE.md
docs/schema/: taskfile.schema.json
examples/: .gitea-actions-deploy.yml  .github-actions-deploy.yml  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  TEST_REPORT.md  Taskfile.softreck.yml  run-all.sh  run-codereview.sh  run-minimal.sh  run-multiplatform.sh  run-saas-app.sh
examples/ai-aider/: .env.example  Taskfile.yml
examples/ai-claude-code/: .env.example  Taskfile.yml
examples/ai-codex/: .env.example  Taskfile.yml
examples/ai-copilot/: .env.example  Taskfile.yml
examples/ai-cursor/: .env.example  Taskfile.yml
examples/ai-gemini-cli/: .env.example  Taskfile.yml
examples/ai-windsurf/: .env.example  Taskfile.yml
examples/ci-generation/: README.md  Taskfile.yml
examples/ci-pipeline/: .env.local  .env.local.example  .env.prod.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/cloud-aws/: .env.dev  .env.dev.example  .env.local  .env.local.example  .env.prod-eu  .env.prod-eu.example  .env.prod-us  .env.prod-us.example  .env.prod.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/codereview.pl/: .drone.yml  .env.local  .env.local.example  .env.prod  .env.prod.example  .gitlab-ci.yml  Jenkinsfile  Makefile  README.md  Taskfile.yml  docker-compose.yml
examples/edge-iot/: .env.factory  .env.factory.example  .env.local  .env.local.example  .env.office  .env.office.example  .env.prod.example  .env.staging.example  .env.warehouse  .env.warehouse.example  README.md  Taskfile.yml
examples/enhanced-error-reporting/: .env.local  README.md  Taskfile.yml
examples/fleet-rpi/: .env.local  .env.local.example  README.md  Taskfile.yml
examples/fullstack-deploy/: .env.local  .env.prod.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/functions-embed/: README.md  Taskfile.yml
examples/iac-ansible/: README.md  Taskfile.yml
examples/iac-argocd/: README.md  Taskfile.yml
examples/iac-bicep/: README.md  Taskfile.yml
examples/iac-cdk-aws/: README.md  Taskfile.yml
examples/iac-cdktf/: README.md  Taskfile.yml
examples/iac-cloudformation/: README.md  Taskfile.yml
examples/iac-crossplane/: README.md  Taskfile.yml
examples/iac-docker-compose/: README.md  Taskfile.yml
examples/iac-fluxcd/: README.md  Taskfile.yml
examples/iac-gcp-deployment-manager/: README.md  Taskfile.yml
examples/iac-helm/: README.md  Taskfile.yml
examples/iac-kustomize/: README.md  Taskfile.yml
examples/iac-nixos/: README.md  Taskfile.yml
examples/iac-nomad/: README.md  Taskfile.yml
examples/iac-opentofu/: README.md  Taskfile.yml
examples/iac-packer/: README.md  Taskfile.yml
examples/iac-pulumi/: README.md  Taskfile.yml
examples/iac-serverless/: README.md  Taskfile.yml
examples/iac-terraform/: .env.dev  .env.local.example  .env.prod-us  .env.prod-us.example  .env.prod.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/iac-terragrunt/: README.md  Taskfile.yml
examples/iac-vagrant/: README.md  Taskfile.yml
examples/import-cicd/: README.md  Taskfile.yml
examples/include-split/: README.md  Taskfile.yml
examples/kubernetes-deploy/: README.md  Taskfile.yml
examples/mega-saas/: .env.local  .env.local.example  .env.prod-asia.example  .env.prod-eu.example  .env.prod-us.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/mega-saas-v2/: .env.local  .env.local.example  .env.prod-asia.example  .env.prod-eu.example  .env.prod-us.example  .env.staging.example  README.md  Taskfile.yml
examples/minimal/: Makefile  README.md  Taskfile.yml
examples/monorepo-microservices/: .env.dev  .env.local  .env.local.example  .env.prod.example  .env.staging  .env.staging.example  README.md  Taskfile.yml
examples/multi-artifact/: README.md  Taskfile.yml
examples/multiplatform/: .env.local  Makefile  README.md  Taskfile.yml
examples/publish-cargo/: .env.local  .env.local.example  .env.prod.example  .env.staging.example  README.md  Taskfile.yml
examples/publish-desktop/: .env.local  .env.local.example  .env.prod.example  .env.staging.example  README.md  Taskfile.yml
examples/publish-docker/: README.md  Taskfile.yml
examples/publish-github/: README.md  Taskfile.yml
project/: README.md  analysis.json  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  validation.toon.yaml
project/root/: context.md  (+2 more)
taskfile/: __init__.py  taskfile.py
tests/: test_api.py  test_auth.py  test_cigen.py  test_classifier.py  test_cli.py  test_click_compat.py  test_compose.py  test_deploy_validation.py  test_diagnostics.py  test_docker_e2e.py  test_doctor_decomposition.py  test_doctor_e2e.py  test_doctor_quality.py  test_dsl_commands.py  test_e2e_examples.py  test_fleet.py  test_graceful_restart.py  test_health.py  test_landing.py  test_models.py  test_parser.py  test_provisioner.py  test_pyqual_integration.py  test_quadlet.py  test_release.py  test_resolver.py  test_runner.py  test_scaffold.py  test_scaffold_customize.py  test_scaffold_from_doql.py  test_setup.py  test_taskfile.py  test_venv_checks.py  test_workspace.py
(+222 files in other folders)
