[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskfile"
version = "0.3.27"
description = "Universal Taskfile runner with multi-environment deploy support. CI/CD agnostic — run locally or from any pipeline."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["taskfile", "deploy", "ci-cd", "devops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
taskfile = "taskfile.cli:main"
tf = "taskfile.cli:main"

[project.urls]
Homepage = "https://github.com/pyfunc/taskfile"
Repository = "https://github.com/pyfunc/taskfile"
Issues = "https://github.com/pyfunc/taskfile/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"taskfile.scaffold" = ["templates/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
