[project]
name = "fixop"
version = "0.1.0"
description = "Infrastructure fix operations — detect and repair DNS, firewall, containers, TLS, systemd issues"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Tom Sapletta", email = "tom@sapletta.com" }]
keywords = ["infrastructure", "devops", "diagnostics", "podman", "docker", "dns", "firewall", "systemd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
]
# Zero external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff","goal>=2.1.0", "costs>=0.1.20", "pfix>=0.1.60"]
ssh = ["paramiko"]  # optional: native SSH instead of subprocess

[project.scripts]
fixop = "fixop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixop"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
